--- a/application/views/scripts/article/index.phtml
+++ b/application/views/scripts/article/index.phtml
@@ -1,10 +1,15 @@
 <div class="main row-fluid">
-    
+
     <div class="span8">
         <div class="content-inner">
             <div class="row-fluid">
                 <div class="pull-left">
                     <span class="label label-info" style="font-size: 30px; line-height: 47px; padding: 3px 11px; margin-top: -13px;">Artikel</span>
+                </div>
+                <div class="pull-right">
+                    <?php if (null !== $this->tag): ?>
+                        <h5>Artikel dengan tag #<?php echo $this->tag; ?></h5>
+                    <?php endif; ?>
                 </div>
             </div>
 
@@ -14,21 +19,12 @@
             <ul class="unstyled article">
                 <?php foreach ($this->articles as $index => $article): ?>
                     <?php
-                    $link = $this->url(array('controller' => 'article', 'action' => 'view', 'id' => $article['id']));
+                    $link = $this->url(array('controller' => 'article', 'action'     => 'view', 'id'         => $article['id']));
                     ?>
                     <li>
                         <article>
                             <div class="pull-left">
-                                <img src="/upload/avatar/asdf.jpg" 
-                                     alt="" 
-                                     width="50"
-                                     height="50"
-                                     class="media-object" />
-                                     <?php // echo $this->thumbnail('avatar', $article['avatar'], 'no-avatar.jpg', 50, 50, 100, ''); ?>
-                                <!--                                <div class="date">
-                                                                    <span class="day"><?php echo Date('j', strtotime($article['created_on'])); ?></span>
-                                                                    <span class="month"><?php echo Date('M', strtotime($article['created_on'])); ?></span>
-                                                                </div>-->
+                                <?php echo $this->thumbnail('avatar', $article['avatar'], 'no-avatar.jpg', 50, 50, 100, ''); ?>
                             </div>
                             <div class="article-content">
                                 <h5>
@@ -38,19 +34,19 @@
                                         </a>
                                     </div>
                                 </h5>
-                                <?php echo $this->truncate($article['content'], 500, "&nbsp;<a href='{$link}'><span class='label label-info'>more</span></a>", true, true); ?>
+                                <?php echo strip_tags($this->truncate($article['content'], 500, "&nbsp;<a href='{$link}'><span class='label label-info'>more</span></a>", true, true)); ?>
                             </div>
                             <div class="article-footer">
                                 <i class="icon-eye-open"></i>&nbsp;<?php echo $article['views']; ?>&nbsp;&nbsp;
-                                <i class="icon-comments"></i>&nbsp;<?php echo rand(0, 1000); ?> &nbsp;&nbsp;
-                                <i class="icon-thumbs-up"></i>&nbsp;<?php echo $article['likes']; ?> &nbsp;&nbsp;
+                                <i class="icon-comments"></i>&nbsp;<?php echo $article['comments'] ?> &nbsp;&nbsp;
+                                <i class="icon-thumbs-up"></i>&nbsp;<?php echo (null !== $article['likes']) ? count(explode(',', $article['likes'])) : 0; ?> &nbsp;&nbsp;
                                 <i class="icon-tags"></i>&nbsp;<?php echo $this->tags($article['tags']); ?>&nbsp;&nbsp;
                             </div>
                             <div class="article-footer pull-right">
-                                <span class="day"><small>Created on <span class="day"><?php echo Date('j', strtotime($article['created_on'])); ?></span>
-                                <span class="month"><?php echo Date('M', strtotime($article['created_on'])); ?></span>
-                                by&nbsp;<a href="#"><?php echo $article['created_by']; ?></a>&nbsp;&nbsp;
-                                </small>
+                                <span class="day"><small>Dibuat pada <span class="day"><?php echo Date('j', strtotime($article['created_on'])); ?></span>
+                                        <span class="month"><?php echo Date('M', strtotime($article['created_on'])); ?></span>
+                                        oleh&nbsp;<a href="#"><?php echo $article['created_by']; ?></a>&nbsp;&nbsp;
+                                    </small>
                             </div>
                         </article>
                         <div class="clearfix"></div>
@@ -61,10 +57,10 @@
             <br />
             <br />
             <br />
-            
+
             <?php echo $this->paginationControl($this->articles, 'sliding', 'pagination_control.phtml'); ?>
-            
-            
+
+
         </div>
     </div>
     <div class="span4 well sidebar">
