--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,5 +1,11 @@
 <?php $this->minifyHeadScript()->appendFile($this->baseUrl('js/application/index.js')); ?>
-
+<?php $this->minifyHeadlink()->appendStylesheet($this->baseUrl('lib/colorbox/colorbox.css')); ?>
+<?php $this->minifyHeadScript()->appendFile($this->baseUrl('lib/colorbox/jquery.colorbox-min.js')); ?>
+<script type="text/javascript">
+    $(function() {
+        $('.colorbox').colorbox({rel: 'colorbox'});
+    });
+</script>
 <div class="main row-fluid">
     <div class="span8">
         <div id="highlight" class="carousel slide">
@@ -76,7 +82,11 @@
                 <div class="jcarousel">
                     <ul>
                         <?php foreach ($this->latestAlbumWithPhotos['photos'] as $index => $photo): ?>
-                            <li><img src="<?php echo $this->baseUrl('timthumb.php?src=' . $photo . '&w=320&h=260&q=100'); ?>; ?>" alt="" /></li>
+                            <li>
+                                <a href="<?php echo $photo; ?>" class="colorbox">
+                                    <img src="<?php echo $this->baseUrl('timthumb.php?src=' . $photo . '&w=320&h=260&q=100'); ?>; ?>" alt="" />
+                                </a>
+                            </li>
                         <?php endforeach; ?>
                     </ul>
                 </div>
@@ -92,7 +102,7 @@
                     <h4><i class="icon-pushpin"></i> Artikel</h4>
                 </div>
                 <div class="pull-right">
-<!--                    <a href="#">Lihat Semua Artikel</a>-->
+                    <!--                    <a href="#">Lihat Semua Artikel</a>-->
                 </div>
             </div>
             <ul class="unstyled article">
