--- a/application/views/scripts/pagination_control.phtml
+++ b/application/views/scripts/pagination_control.phtml
@@ -1,4 +1,4 @@
-<?php if ($this->pageCount): ?>
+<?php if ($this->pageCount > 1): ?>
   <div class="pagination pull-right">
     <ul>
       <li class="disabled">
