--- a/application/views/scripts/gallery/index.phtml
+++ b/application/views/scripts/gallery/index.phtml
@@ -1,6 +1,6 @@
 <?php $this->minifyHeadlink()->appendStylesheet($this->baseUrl('css/application/gallery.css')); ?>
 <div class="main row-fluid">
-    <div class="span8">
+    <div class="span12">
         <div class="content-inner">
             <ul class="thumbnails gallery-grid">
                 <?php foreach ($this->albums as $index => $album): ?>
@@ -25,7 +25,9 @@
             </ul>
         </div>
     </div>
-    <div class="span4 sidebar well">
-        <?php echo $this->render('sidebar.phtml'); ?>
+</div>
+<div class="row-fluid">
+    <div class="span12 well bottombar">
+        <?php echo $this->render('bottombar.phtml'); ?>
     </div>
 </div>
