--- a/application/views/scripts/gallery/view.phtml
+++ b/application/views/scripts/gallery/view.phtml
@@ -5,7 +5,7 @@ $this->minifyHeadscript()
 ->appendFile($this->baseUrl('js/application/gallery.js'));
 ?>
 <div class="main row-fluid">
-    <div class="span8">
+    <div class="span12">
         <div class="content-inner">
             <h4>Galeri #<?php echo $this->album['title']; ?></h4>
             <ul class="thumbnails" style="margin-top: 40px">
@@ -19,7 +19,9 @@ $this->minifyHeadscript()
             </ul>
         </div>
     </div>
-    <div class="span4 sidebar well">
-        <?php echo $this->render('sidebar.phtml'); ?>
+</div>
+<div class="row-fluid">
+    <div class="span12 well bottombar">
+        <?php echo $this->render('bottombar.phtml'); ?>
     </div>
 </div>
