--- a/application/views/scripts/bottombar.phtml
+++ b/application/views/scripts/bottombar.phtml
@@ -1,17 +1,3 @@
-<div class = "agenda widget top-gray span4">
-    <div class = "widget-header">
-        <h4><i class = "icon-info-sign"></i> Pengumuman</h4>
-    </div>
-    <div class = "widget-content">
-        <ul class = "list_a" style = "list-style: square">
-            <li><a href = "#">Kisi-Kisi Ujian Nasional 2012/2013</a></li>
-            <li><a href = "#">Lomba Menulis Surat Remaja Nasional Kemkominfo</a></li>
-            <li><a href = "#">Prosedur Operasi Standar (POS) Ujian Nasional 2012/2013</a></li>
-            <li><a href = "#">Permendikbud Nomor 3 Tahun 2013 Tentang Kriteria Kelulusan dan Penyelenggaraan Ujian Nasional</a></li>
-        </ul>
-    </div>
-</div>
-
 <div class = "agenda widget top-blue span4">
     <div class = "widget-header">
         <h4><i class = "icon-calendar"></i> Agenda</h4>
@@ -55,3 +41,71 @@
         </ul>
     </div>
 </div>
+
+<?php if ($polling = $this->Widget()->getActivePolling()): ?>
+    <?php
+    $polls = Zend_Controller_Front::getInstance()->getRequest()->getCookie('polls');
+    ?>
+    <div class = "widget top-green span4" id="polling-widget">
+        <div class = "widget-header">
+            <h4><i class = "icon-list-alt"></i> Jajak Pendapat</h4>
+        </div>
+        <div class = "widget-content">
+            <p><?php echo $polling[0]['question']; ?></p>
+            <?php if ($polls): ?>
+                <ul class="unstyled">
+                    <?php foreach ($polling as $key => $result): ?>
+                        <?php
+                        $percent = strstr($result['percent'], '%', true);
+                        if ($percent <= 10) $class = 'progress-danger';
+                        elseif ($percent <= 20) $class = 'progress-warning';
+                        elseif ($percent <= 30) $class = 'progress-info';
+                        elseif ($percent > 40) $class = 'progress-success';
+                        ?>
+                        <li>
+                            <?php echo $result['answer']; ?>
+                            <span class="text-info pull-right">
+                                <?php echo $result['total']; ?> Pemilih
+                            </span>
+                            <div class="progress <?php echo $class ?>">
+                                <div class="bar"
+                                     style="width: <?php echo $result['percent'] ?>">
+                                         <?php echo round($result['percent']) . '%' ?>
+                                </div>
+                            </div>
+                        </li>
+                    <?php endforeach; ?>
+                </ul>
+            <?php else: ?>
+                <form action="<?php echo $this->url(array('controller' => 'polling', 'action'     => 'vote')); ?>" method = "post">
+                    <input type="hidden"
+                           name="question_id"
+                           value="<?php echo $polling[0]['qid']; ?>" />
+                    <input type="hidden"
+                           name="return_uri"
+                           value="<?php echo $this->url() ?>"/>
+                    <ul class = "unstyled">
+                        <?php foreach ($polling as $index => $polling): ?>
+                            <li>
+                                <label for="<?php echo 'vote' . $polling['aid']; ?>" class="radio">
+                                    <input type = "radio"
+                                           name = "vote"
+                                           id="<?php echo 'vote' . $polling['aid'] ?>"
+                                           value="<?php echo $polling['aid']; ?>" />
+                                           <?php echo $polling['answer']; ?>
+                                </label>
+                            </li>
+                        <?php endforeach; ?>
+                    </ul>
+                    <input type = "submit" class = "btn btn-success pull-right" value = "Kirim" />
+                    <div class = "clearfix"></div>
+                </form>
+
+            <?php endif; ?>
+
+        </div>
+        <div class = "widget-footer">
+
+        </div>
+    </div>
+<?php endif; ?>
