--- a/public/css/front_layout.css
+++ b/public/css/front_layout.css
@@ -476,6 +476,7 @@ input[type="search"], input[type="tel"], input[type="color"], .uneditable-input 
     box-shadow: none;
     margin-bottom: 0;
     padding: 0;
+    margin-top: 250px;
     padding-bottom: 20px;
     padding-left: 15px;
     padding-right: 15px;
