--- a/application/views/scripts/sidebar.phtml
+++ b/application/views/scripts/sidebar.phtml
@@ -6,7 +6,7 @@
             <h4>Tag Cloud</h4>
         </div>
         <div class="widget-content">
-            <?php echo $this->widget()->getTagCloud(); ?>
+            <?php //echo $this->widget()->getTagCloud(); ?>
         </div>
     </div>
     <center>
